examples/mytemplate.yml
apiVersion: v1
kind: Template
metadata:
  creationTimestamp: null
  name: test_template
objects:
- apiVersion: v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: jws30-tomcat7-basic-s2i
      application: sometest
      my_label: tomcat_test
      template: jws30-tomcat7-basic-s2i
      test2: hello
      xpaas: 1.2.0
    name: sometest
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: sometest:latest
    postCommit: {}
    resources: {}
    runPolicy: Serial
    source:
      contextDir: tomcat-websocket-chat
      git:
        ref: "1.2"
        uri: https://github.com/jboss-openshift/openshift-quickstarts.git
      type: Git
    strategy:
      sourceStrategy:
        forcePull: true
        from:
          kind: ImageStreamTag
          name: jboss-webserver30-tomcat7-openshift:1.2
          namespace: openshift
      type: Source
    triggers:
    - github:
        secret: MpH3DX5r
      type: GitHub
    - generic:
        secret: 4JYxWYE0
      type: Generic
    - imageChange: {}
      type: ImageChange
    - type: ConfigChange
  status:
    lastVersion: 0
- apiVersion: v1
  kind: Build
  metadata:
    creationTimestamp: null
    labels:
      app: jws30-tomcat7-basic-s2i
      application: sometest
      buildconfig: sometest
      my_label: tomcat_test
      openshift.io/build-config.name: sometest
      openshift.io/build.start-policy: Serial
      template: jws30-tomcat7-basic-s2i
      test2: hello
      xpaas: 1.2.0
    name: sometest-1
  spec:
    nodeSelector: null
    output:
      pushSecret:
        name: builder-dockercfg-ckbzy
      to:
        kind: ImageStreamTag
        name: sometest:latest
    postCommit: {}
    resources: {}
    revision:
      git:
        author:
          email: marko.luksa@gmail.com
          name: Marko Luksa
        commit: caec20220374804b2cb3d3622a754f9091af7c57
        committer:
          email: marko.luksa@gmail.com
          name: Marko Luksa
        message: 'Fixed bug: summary is displayed instead of description (cherry picked
          from com..'
      type: Git
    serviceAccount: builder
    source:
      contextDir: tomcat-websocket-chat
      git:
        ref: "1.2"
        uri: https://github.com/jboss-openshift/openshift-quickstarts.git
      type: Git
    strategy:
      sourceStrategy:
        forcePull: true
        from:
          kind: DockerImage
          name: registry.access.redhat.com/jboss-webserver-3/webserver30-tomcat7-openshift@sha256:cacb2099dec1ec3618d0f13ff9e54677179ca8a66bbaf7700317567d049eb6e3
      type: Source
    triggeredBy:
    - message: Build configuration change
  status:
    config:
      name: sometest
    outputDockerImageReference: 172.30.113.129:5000/vipatel-test/sometest:latest
    phase: New
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    generation: 1
    labels:
      app: jws30-tomcat7-basic-s2i
      application: sometest
      my_label: tomcat_test
      template: jws30-tomcat7-basic-s2i
      test2: hello
      xpaas: 1.2.0
    name: sometest
  spec:
    tags:
    - annotations: null
      from:
        kind: DockerImage
        name: 172.30.113.129:5000/vipatel-test/sometest:latest
      generation: null
      importPolicy: {}
      name: latest
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    generation: 1
    labels:
      app: jws30-tomcat7-basic-s2i
      application: sometest
      my_label: tomcat_test
      template: jws30-tomcat7-basic-s2i
      test2: hello
      xpaas: 1.2.0
    name: sometest
  spec:
    replicas: 1
    selector:
      deploymentConfig: sometest
    strategy:
      recreateParams:
        timeoutSeconds: 600
      resources: {}
      type: Recreate
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: jws30-tomcat7-basic-s2i
          application: sometest
          deploymentConfig: sometest
          my_label: tomcat_test
          test2: hello
        name: sometest
      spec:
        containers:
        - env:
          - name: JWS_ADMIN_USERNAME
            value: jwsadmin
          - name: JWS_ADMIN_PASSWORD
            value: jwsadmin
            name: APPLICATION_NAME
            value: sometest
          image: 172.30.113.129:5000/vipatel-test/sometest@sha256:66131eb3d7b64b2b2e092103cf69da1ddbef66bee7ce28f97885ab7e7fcdd920
          imagePullPolicy: Always
          name: sometest
          ports:
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          - containerPort: 8080
            name: http
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/bash
              - -c
              - curl -s -u jwsadmin:jwsadmin 'http://localhost:8080/manager/jmxproxy/?get=Catalina%3Atype%3DServer&att=stateName'
                |grep -iq 'stateName *= *STARTED'
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        securityContext: {}
        terminationGracePeriodSeconds: 60
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - sometest
        from:
          kind: ImageStreamTag
          name: sometest:latest
          namespace: vipatel-test
      type: ImageChange
    - type: ConfigChange
  status: {}
- apiVersion: v1
  kind: ReplicationController
  metadata:
    annotations:
      kubectl.kubernetes.io/desired-replicas: "1"
      openshift.io/deployer-pod.name: sometest-1-deploy
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: sometest
      openshift.io/deployment.phase: Running
      openshift.io/deployment.replicas: "0"
      openshift.io/deployment.status-reason: image change
      openshift.io/encoded-deployment-config: |
        {"kind":"DeploymentConfig","apiVersion":"v1","metadata":{"name":"sometest","namespace":"vipatel-test","selfLink":"/oapi/v1/namespaces/vipatel-test/deploymentconfigs/sometest","uid":"7efd6772-3f55-11e7-8429-001a4a0aa1f5","resourceVersion":"8753263","generation":2,"creationTimestamp":"2017-05-23T01:16:49Z","labels":{"app":"jws30-tomcat7-basic-s2i","application":"sometest","my_label":"tomcat_test","template":"jws30-tomcat7-basic-s2i","test2":"hello","xpaas":"1.2.0"},"annotations":{"openshif [...]
    creationTimestamp: null
    generation: 1
    labels:
      app: jws30-tomcat7-basic-s2i
      application: sometest
      my_label: tomcat_test
      openshift.io/deployment-config.name: sometest
      template: jws30-tomcat7-basic-s2i
      test2: hello
      xpaas: 1.2.0
    name: sometest-1
  spec:
    replicas: 1
    selector:
      deployment: sometest-1
      deploymentConfig: sometest
      deploymentconfig: sometest
    template:
      metadata:
        annotations:
          openshift.io/deployment-config.latest-version: "1"
          openshift.io/deployment-config.name: sometest
          openshift.io/deployment.name: sometest-1
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: jws30-tomcat7-basic-s2i
          application: sometest
          deployment: sometest-1
          deploymentConfig: sometest
          deploymentconfig: sometest
          my_label: tomcat_test
          test2: hello
      spec:
        containers:
        - env:
          - name: JWS_ADMIN_USERNAME
            value: jwsadmin
          - name: JWS_ADMIN_PASSWORD
            value: jwsadmin
          - name: APPLICATION_NAME
            value: sometest
          image: 172.30.113.129:5000/vipatel-test/sometest@sha256:66131eb3d7b64b2b2e092103cf69da1ddbef66bee7ce28f97885ab7e7fcdd920
          imagePullPolicy: Always
          name: sometest
          ports:
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          - containerPort: 8080
            name: http
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/bash
              - -c
              - curl -s -u jwsadmin:jwsadmin 'http://localhost:8080/manager/jmxproxy/?get=Catalina%3Atype%3DServer&att=stateName'
                |grep -iq 'stateName *= *STARTED'
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        securityContext: {}
        terminationGracePeriodSeconds: 60
  status:
    replicas: 0
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      description: Route for application's http service.
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/host.generated: "true"
    creationTimestamp: null
    labels:
      app: jws30-tomcat7-basic-s2i
      application: sometest
      my_label: tomcat_test
      template: jws30-tomcat7-basic-s2i
      test2: hello
      xpaas: 1.2.0
    name: sometest
  spec:
    host:
    to:
      kind: Service
      name: sometest
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2017-05-23T01:16:49Z
        status: "True"
        type: Admitted
      host: 
      routerName: router
      wildcardPolicy: None
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: The web server's http port.
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: jws30-tomcat7-basic-s2i
      application: sometest
      my_label: tomcat_test
      template: jws30-tomcat7-basic-s2i
      test2: hello
      xpaas: 1.2.0
    name: sometest
  spec:
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentConfig: sometest
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      kubernetes.io/created-by: |
        {"kind":"SerializedReference","apiVersion":"v1","reference":{"kind":"ReplicationController","namespace":"vipatel-test","name":"sometest-1","uid":"9dfc3e00-3f55-11e7-b02c-001a4a0aa1f3","apiVersion":"v1","resourceVersion":"8753286"}}
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: sometest
      openshift.io/deployment.name: sometest-1
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/scc: restricted
    creationTimestamp: null
    generateName: sometest-1-
    labels:
      app: jws30-tomcat7-basic-s2i
      application: sometest
      deployment: sometest-1
      deploymentConfig: sometest
      deploymentconfig: sometest
      my_label: tomcat_test
      test2: hello
  spec:
    containers:
    - env:
      - name: JWS_ADMIN_USERNAME
        value: jwsadmin
      - name: JWS_ADMIN_PASSWORD
        value: jwsadmin
      - name: APPLICATION_NAME
        value: sometest
      image: 172.30.113.129:5000/vipatel-test/sometest@sha256:66131eb3d7b64b2b2e092103cf69da1ddbef66bee7ce28f97885ab7e7fcdd920
      imagePullPolicy: Always
      name: sometest
      ports:
      - containerPort: 8778
        name: jolokia
        protocol: TCP
      - containerPort: 8080
        name: http
        protocol: TCP
      readinessProbe:
        exec:
          command:
          - /bin/bash
          - -c
          - curl -s -u jwsadmin:jwsadmin 'http://localhost:8080/manager/jmxproxy/?get=Catalina%3Atype%3DServer&att=stateName'
            |grep -iq 'stateName *= *STARTED'
        failureThreshold: 3
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 1
      resources: {}
      securityContext:
        capabilities:
          drop:
          - KILL
          - MKNOD
          - SETGID
          - SETUID
          - SYS_CHROOT
        privileged: false
      terminationMessagePath: /dev/termination-log
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: default-token-1qoh3
        readOnly: true
    dnsPolicy: ClusterFirst
    imagePullSecrets:
    - name: default-dockercfg-nff4o
    nodeName: cmpt-03.openshift.centralci.eng.rdu2.redhat.com
    restartPolicy: Always
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 60
    volumes:
    - name: default-token-1qoh3
      secret:
        defaultMode: 420
        secretName: default-token-1qoh3
  status:
    phase: Pending
